vim-k8s: Fix deprecated URL creation.