@@ -18,7 +18,8 @@ package com.ubiqube.etsi.mano.vim.k8s;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.ubiqube.etsi.mano.dao.mano.config.Servers;
 import com.ubiqube.etsi.mano.dao.mano.k8s.K8sServers;
@@ -35,9 +36,9 @@ public class K8sTillerClient implements K8sClient {
 	@Override
 	public String deploy(final Servers srv, final K8sServers server, final String userKey, final File file, final String name) {
 		try {
-			final TillerClient cli = TillerClient.ofCerts(new URL(server.getApiAddress()), server.getCaPem().getBytes(), server.getUserCrt().getBytes(), userKey, name);
+			final TillerClient cli = TillerClient.ofCerts(new URI(server.getApiAddress()).toURL(), server.getCaPem().getBytes(), server.getUserCrt().getBytes(), userKey, name);
 			return cli.deploy(file);
-		} catch (final MalformedURLException e) {
+		} catch (final MalformedURLException | URISyntaxException e) {
 			throw new VimException(e);
 		}
 	}
